--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -791,7 +791,7 @@ instalações com materiais combustíveis.\n\n
     </string>
 
     -------------------------------------------------------------------------------------------------------------------------------
-    PERGUNTAS E RESPOSTAS
+    PERGUNTAS FREQUENTES
     <string name="pergunta1_projeto">Quais os tipos de Vistoria (Processos) existem no CBMGO?</string>
     <string name="resposta1_projeto">
         Existem 2 (dois) tipo de Processos:\n
