--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -892,5 +892,22 @@ instalações com materiais combustíveis.\n\n
         e informações por parte do requerinte ao CMBGO.
     </string>
 
+    ALERTAS DE PROCESSO SIMPLIFICADO
+    <string name="alerta_tituloProcesso">
+        Desde que atendam às seguintes condições:
+    </string>
+
+    <string name="alerta_textoProcesso">
+        a) Não possuir mais de 03 (três) pavimentos e não possuir qualquer tipo de abertura através de portas, telhados e janelas, para o interior de
+        edificações ou estabelecimentos adjacentes; \n\n
+        b) Possuir lotação abaixo de 200 (duzentas) pessoas; \n\n
+        c) Não possuir subsolo com ocupação distinta de estacionamento;\n\n
+        d) Não comercializar ou armazenar volume superior a 500 (quinhentos) litros de líquido inflamável ou combustível;\n\n
+        e) Não possuir GLP acima de 190 (cento e noventa) Kg; \n\n
+        f) Não comercializar ou revender gás liquefeito de petróleo (GLP); \n\n
+        g) Não comercializar, manipular ou armazenar produtos perigosos à saúde humana, ao meio ambiente ou ao patrimônio, tais como: explosivos,
+        peróxidos orgânicos ou substâncias oxidantes, tóxicas, radioativas, corrosivas e perigosas diversas.
+    </string>
+
 
 </resources>
